cluster/apps/deeptutor/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deeptutor
  labels:
    app: deeptutor
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: networking-oauth2-proxy-chain@kubernetescrd
    hajimari.io/enable: "true"
    hajimari.io/appName: "DeepTutor"
    hajimari.io/icon: "school"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kb.kblb.io
      secretName: my-certs-deeptutor
  rules:
    - host: kb.kblb.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deeptutor
                port:
                  name: http
